# dftax

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml  nightly.yml  publish.yml
_static/: custom.css
all-of-dftax/: index.html
api/: index.html
api/batched/: index.html
api/coulomb/: index.html
api/forces-properties/: index.html
api/functionals/: index.html
api/grids/: index.html
api/integrals/: index.html
api/multi-device/: index.html
api/solvers/: index.html
dftax/: __init__.py
dftax/basis/: __init__.py  loader.py
dftax/energy/: __init__.py  boys.py  d3.py  d4.py  grid.py  gto.py  hartree.py  hybrid.py  jax_df_integrals.py  orbitals.py  potentials.py  vv10.py  xc.py
dftax/grid/: __init__.py  becke.py  grid.py  lebedev.py
dftax/integrals/: __init__.py  coulomb_potential.py  eri2c.py  eri3c.py  eri3c_bucketed.py  eri4c.py  multipole.py  nuclear_attraction.py  nuclear_repulsion.py  overlap.py  shell_pairs.py
dftax/ks/: __init__.py  batched.py  driver.py  energy.py  energy_uks.py  forces.py  forces_uks.py  guess.py  implicit.py  minimize.py  minimize_uks.py  newton.py  properties.py  scf.py  scf_uks.py  shard.py  terms.py
dftax/system/: __init__.py  molecule.py
dftax/utils/: __init__.py  energy_aux.py  vmap.py
docs/: all-of-dftax.md  api.md  faq.md  index.md  tips.md
docs/api/: batched.md  build.md  coulomb.md  forces-properties.md  functionals.md  grids.md  integrals.md  multi-device.md  solvers.md
docs/examples/: conformers.ipynb  density-fitting.ipynb  forces.ipynb  geometry-optimization.ipynb  implicit-diff.ipynb  multi-gpu.ipynb  open-shell.ipynb  properties.ipynb  water.ipynb
docs/tutorials/: batched.md  coulomb-backends.md  drivers.md  forces.md  getting-started.md  implicit-diff.md  properties.md
examples/: 01_water_rks.py  02_ch3_uks.py  03_forces_h2.py  04_density_fitting.py  05_batched.py  06_properties.py  README.md
examples/conformers/: index.html
examples/density-fitting/: index.html
examples/forces/: index.html
examples/geometry-optimization/: index.html
examples/implicit-diff/: index.html
examples/multi-gpu/: index.html
examples/open-shell/: index.html
examples/properties/: index.html
examples/water/: index.html
faq/: index.html
scripts/: compare_full_eri_vs_df.py  gen_cart2sph.py  gen_d3_data.py  gen_d4_data.py  gen_lebedev.py
scripts/bench/: BENCHMARKS.md  benchmark.py
scripts/docs/: check_coverage.py
scripts/gpu/: GPU_VALIDATION.md  validate_gpu.py
scripts/perf/: a3_first_call.py  a3_roll_hermite.py  bench_bucketed.py  bucketed_eri3c.py  profile_classes.py  validate_bucketed.py
search/: search_index.json
tests/: conftest.py
tests/unit/: test_adiis.py  test_batched.py  test_boys_function.py  test_build_api.py  test_d3.py  test_d4.py  test_df.py  test_df_streaming.py  test_eri.py  test_eri4c_compile.py  test_forces.py  test_grid_pruning.py  test_grid_streaming.py  test_guess.py  test_high_l.py  test_high_l_aux.py  test_hybrid.py  test_implicit.py  test_integrals.py  test_integrals_batched.py  test_jax_df_integrals.py  test_jax_gto.py  test_level_shift.py  test_mgga.py  test_minimize.py  (+16 more)
tips/: index.html
(+11 files in other folders)
